--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         </form>
     </div>
 
-    <!-- Content Section -->
+    <!-- Content Section (Visible Only When Authenticated) -->
     <div id="content-section" style="display: none;">
         <div>
             <span id="user-info"></span>
@@ -58,27 +58,27 @@
             <br><br>
             <button type="submit">Add Review</button>
         </form>
-
-        <!-- Reviews Table -->
-        <h2>All Reviews</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Product</th>
-                    <th>Brand</th>
-                    <th>Content</th>
-                    <th>Score</th>
-                    <th>Date Posted</th>
-                    <th>Author</th>
-                    <th>Product Link</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody id="reviews-body">
-                <!-- Reviews will be populated here -->
-            </tbody>
-        </table>
     </div>
+
+    <!-- Reviews Table (Always Visible) -->
+    <h2>All Reviews</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Product</th>
+                <th>Brand</th>
+                <th>Content</th>
+                <th>Score</th>
+                <th>Date Posted</th>
+                <th>Author</th>
+                <th>Product Link</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody id="reviews-body">
+            <!-- Reviews will be populated here -->
+        </tbody>
+    </table>
 
     <script src="app.js"></script>
 </body>
